<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">SqliteDataDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="insert">添加</string>
    <string name="username">用户名</string>
    <string name="userpwd">password</string>
    <string name="username_database">数据库</string>
    <string name="clear_database">清空数据库</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
</resources>
